--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://javaguides.ccbtqawd66uq.us-east-2.rds.amazonaws.com:3306/myblog?useSSL=false&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password = Mysql123$
+spring.datasource.url = enter your AWS MySQL host URL
+spring.datasource.username = AWS MySQL username
+spring.datasource.password = AWS MySQL password
 
 # hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
